--- a/style.css
+++ b/style.css
@@ -931,44 +931,47 @@ a:hover #line1{
 /* >>>>>page1>>>>>>>>>>>>> */
     .page1 .text-1 h4{
         font-size: 8px;
-        margin-top: 20px;
+        margin-top: 60px;
     }
     .page1 .text-2 h1{
+        margin-top: 5px;
         font-size: 25px;
     }
     .page1>h5{
         font-size: 6px;
+        margin-top: 5px;
     }
     .page1 .text-container{
         height: 20px;
-        margin-top: 20px;
+        margin-top: 30px;
         width: 200px;
         /* background-color: rebeccapurple; */
     }
     .page1{
-        height: 300px;
-        margin-bottom: -140px;
+        margin-bottom: -200px;
     }
     .page1 .text-container h5,h6{
        font-size: 8px;
     }
     .page1 .swiper{
-        height: 220px;
+        height: 250px;
         width: 100%;
+        margin-top: 10px;
         position: relative;
+        /* background-color: rebeccapurple; */
     }
     .page1 .swiper .circle{
         display: none;
     }
     .page1 .swiper-slide{
-        height: 220px;
-        background-color: #fff;
+        height: 250px;
+        background-color: #fdfdfd;
     }
     .page1 .swiper-button-prev,.swiper-button-next{
         display: none;
     }
     .swiper-slide .shoes-image{
-        height:150px;
+        height:180px;
         width: 100px;
         margin-bottom: 2vw;
         position: relative;
@@ -1016,6 +1019,7 @@ a:hover #line1{
     .page2 .text-animation-page2{
         height: 100px;
         width: 200px;
+        margin-bottom: 10px;
     }
     .page2 .text-animation-page2 h1{
         font-size: 10px;
@@ -1112,6 +1116,201 @@ a:hover #line1{
         display: none;
     }
     #back{
-        display: none;
+        height: 70vh;
+        width: 100vw;
+        position: relative;
+        background-color:#253B39;
+        overflow: hidden;
+    
     }
+    #back .loga{
+        height: 50vh;
+        width: 50vh;
+        border-radius: 50%;
+        background-color: #8c8e8e;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+        z-index: 9;
+    }
+    
+    #back .front{
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        z-index: 50;
+        padding: 5vw;
+        
+    }
+    #back .front .animate {
+        color: #ffffff;
+        z-index: 999;
+
+        
+    }
+    .child{
+        text-align: center;
+        display: inline-block;
+    }
+    .parent{
+        /* overflow-y: hidden; */
+        display: block;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .front .button {
+        margin-top: 10vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .button button{
+        border: 1px solid #ffffff;
+        border-radius: 10vw;
+        padding: 2vw 5vw;
+        font-size: 2vw;
+        font-weight: 300;
+        width: 35vw;
+        color: rgb(255, 255, 255);
+        background-color: #0e0d0d00;
+        transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+        display: none;
+    
+    }
+   
+    .Featur-container{
+        margin-top: 10vw;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    
+    }
+    .Featur-box{
+        position: relative;
+        top: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 20vw;
+        height: 7vw;
+        padding: .8vw 1vw;
+    }
+    .Featur-box h5{
+        color: rgb(255, 255, 255);
+        font-size: 2.3vw;
+        font-weight: 500;
+        position: relative;
+        z-index: 10;
+    }
+    .Featur-box .logo{
+        width: 3vw;
+        height: 3vw;
+        border-radius: 50vw;
+        background-color: rgba(152, 152, 152, 0.737);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: .9vw;
+        font-weight: 700;
+        position: relative;
+        z-index: 10;
+    }
+
+    
+    #footer{
+        margin-top: 5%;
+        display: flex;
+        justify-content: space-between;
+    }
+    .resours{
+           width: 70vw;
+           display: flex;
+           gap: 20%;
+    }
+    .resours .text-box{
+        display: flex;
+        flex-direction: column;
+        gap: 4vw;
+    }
+    .resours .text-box h1{
+        text-align: start;
+        font-size: 3vw;
+        font-weight: 500;
+        color: rgb(255, 255, 255);
+    
+    }
+    .resours .text-box .content{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        position: relative;
+    }
+    .text-box .content a{
+        position: relative;
+        width: fit-content;
+        font-size: 1.8vw;
+        font-weight: 300;
+        color: rgb(255, 255, 255);
+        text-decoration: none;
+    
+    }
+    .footer-right h1{
+        font-size: 2.5vw;
+        color: #ffffff;
+        font-weight: 200;
+        margin-top: 2px;
+    }
+    
+    a .line{
+        position: absolute;
+        bottom: 0;
+        height: 3%;
+        background-color: rgb(255, 253, 253);
+    }
+    
+    a #line1{
+        width: 0%;
+        left:0;
+        transition: all cubic-bezier(0.19, 1, 0.22, 1) ,1s;
+        transition-delay: .1s;
+    }
+    a #line2{
+        width: 100%;
+         right: 0;
+        transition: all cubic-bezier(0.19, 1, 0.22, 1) , 1s;
+    
+    }
+    a:hover #line2{
+        width: 0%;
+    }
+    a:hover #line1{
+        width: 100%;
+    } 
+    .mtline{
+       margin-top: 10vw;
+       background-color: rgb(191, 191, 191);
+    }
+    .end{
+        margin-top: 5vw;
+        display: flex;
+        align-items: center;
+        gap: 2vw;
+        position: absolute;
+    }
+    .end h4{
+        font-size: 1.5vw;
+        font-weight: 300;
+        font-family: gilroy;
+        color: rgb(255, 255, 255);
+        transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    }
+    .end h4:hover{
+        opacity: .6;
+    }
+    
+
+
+
 }
