--- a/style.css
+++ b/style.css
@@ -889,6 +889,17 @@ a:hover #line1{
 
 
 @media (max-width:600px) {
+
+    .loading{
+        height: 100vh;
+        width: 100%;
+        overflow-y: hidden;
+        position: fixed;
+        /* background-color: white; */
+        top: 0;
+        left: 0;
+        z-index: 999;
+    }
     .loading>h1{
         font-size: 30px;
     }
